--- a/calculator.css
+++ b/calculator.css
@@ -15,7 +15,7 @@ body {
     'clear clear divide multiply'
     'seven eight nine minus'
     'four five six plus'
-    'one two three plus'
+    'one two three enter'
     'zero zero decimal enter';
   column-gap: 1rem;
   row-gap: 1rem;
