--- a/calculator.css
+++ b/calculator.css
@@ -27,9 +27,12 @@ body {
 
 .btn {
   border-radius: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-items: center;
+}
+
+.btn:hover {
+  box-shadow: inset 0 0 0 .2rem hsl(60, 100%, 50%);
 }
 
 .number {
@@ -48,13 +51,18 @@ body {
 
 #clear {
   grid-area: clear;
-  background: hsl(50, 70%, 60%);
+  background: hsl(80, 50%, 60%);
 }
 
 #zero {
   grid-area: zero;
 }
 
+#decimal {
+  background: hsl(200, 100%, 20%);
+}
+
 #enter {
   grid-area: enter;
+  background: hsl(115, 50%, 50%);
 }
